DB-1476 - PermGen error. Set _startSplice() function to run with new system args -XX:MaxPermSize=256M -XX:+CMSClassUnloadingEnabled and increased max mem to 5GB -Xmx5g.